--- a/scripts/I-CAH UK practice script.Rmd
+++ b/scripts/I-CAH UK practice script.Rmd
@@ -5,8 +5,12 @@ date: "2025-02-04"
 output: html_document
 ---
 
-test for Git
-another test
+---
+title: "The perfect processed clean I-CAH data"
+author: "R.Welch"
+date: "2025-01-07"
+output: html_document
+---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -18,3 +22,641 @@ packages <- c("tidyverse", "readxl", "dplyr", "magrittr", "mixtools", "emmeans",
 
 lapply(packages, library, character.only = TRUE)
 ```
+
+```{r : reading in data}
+# data <- read.csv("data/THe perfect processed clean I-CAh table.csv", header=T, na.strings="")
+
+participants <- read.csv("data/CO-ID_202311_NK longitudinal data 02.09.24.csv", header=T, na.strings="")
+
+ae <- read.csv("data/CO-ID_202311_NK AE 02.09.24.csv", header=T, na.strings="")
+
+medication <- read.csv("data/CO-ID_202311_NK Meds 02.09.24.csv", header=T, na.strings="NULL")
+
+fludro <- read.csv("data/CO-ID_202311_NK Fludro 02.09.24.csv", header=T, na.strings="NULL")
+
+labs <- read.csv("data/CO-ID_202311_NK Labs 02.09.24.csv", header=T, na.strings="NULL")
+```
+
+*********************************
+*********************************
+------Removing duplicates------
+
+Making unique identifier for each assessment by combining co-id and assessment date.
+```{r : making new unique identifier}
+participants$coid_asse_date <- paste(participants$CO.ID, participants$Date...CAH.Longitudinal.Data)
+```
+
+Checking for any duplicate entries (i.e.: any duplicates in the newly made unique identifier).
+'list of duplicates frame' gives output of duplicate candidates
+```{r : checking for duplicates}
+duplicates <- freq(participants$coid_asse_date)
+duplicatesframe <- as.data.frame(duplicates)
+duplicatesframe <- rownames_to_column(duplicatesframe, var="idvisitdate")
+```
+
+Now to remove any non-duplicates in 'duplicatesframe' to show us what the actual duplicates are and how many times they've been duplicated
+```{r : isolating duplicate occurances, include= FALSE}
+duplicatesframe <- duplicatesframe[duplicatesframe$idvisitdate != c("Total", "<NA>"),]
+duplicatesframe <- duplicatesframe[-c(3:6)]
+
+duplicateassessments <- duplicatesframe %>%
+  filter(Freq>1)
+```
+
+Make a new vector to use as list of duplicate entries to remove from participants dataframe and then remove duplicated entries from participants dataframe with a subset.
+Because there's no way of knowing which duplicate entry is the correct one, all duplicates are removed.
+```{r : removing duplicates, include=FALSE}
+idvisitstoremove <- duplicateassessments$idvisitdate
+
+participantsnoduplicates <- subset(participants, !coid_asse_date %in% idvisitstoremove)
+
+freqcheck <- as.data.frame(freq(participantsnoduplicates$coid_asse_date))
+freqcheck <- rownames_to_column(freqcheck, var="idvisitdate")
+freqcheck <- freqcheck[freqcheck$idvisitdate != c("Total", "<NA>"),]
+# freqcheck
+```
+
+Making a dataframe of the removed duplicate assessment entries
+```{r : removed duplicates}
+toremove <- duplicateassessments$idvisitdate
+removedrecords <- subset(participants, coid_asse_date %in% toremove)
+
+write.csv(removedrecords, file = "outputs/removedrecords_perfect.csv", row.names = F, na = "")
+```
+
+Because I've removed all duplicate assessment entries, we might have lost participant/s if their only entry is one of these removed duplicates.
+This will show which participants, if any, have been lost.
+We need to split apart the idvisitdate to get the CO.IDs isolated
+```{r : identifying lost participants}
+duplicateassessments$id <- sapply(strsplit(duplicateassessments$idvisitdate," "), `[`, 1)
+duplicateassessments$visitdate<- sapply(strsplit(duplicateassessments$idvisitdate," "), `[`, 2)
+
+toremovelostparticipants <- participantsnoduplicates$CO.ID
+
+lostparticipants <- NA
+lostparticipants <- subset(participants, !CO.ID %in% toremovelostparticipants)
+
+write.csv(lostparticipants, file = "outputs/lostparticipants_perfect.csv", row.names = F, na = "")
+
+print("Due to duplications during data entry, we have lost")
+n_unique(lostparticipants$CO.ID)
+print("participants (because their only 'contributions' to the database have been removed")
+```
+
+```{r : making participantsnoduplicates}
+idvisitstoremove <- duplicateassessments$idvisitdate
+
+participantsnoduplicates <- subset(participants, !coid_asse_date %in% idvisitstoremove)
+
+freqcheck <- as.data.frame(freq(participantsnoduplicates$coid_asse_date))
+freqcheck <- rownames_to_column(freqcheck, var="idvisitdate")
+freqcheck <- freqcheck[freqcheck$idvisitdate != c("Total", "<NA>"),]
+
+write.csv(participantsnoduplicates, file = "outputs/participantsnoduplicates_perfect.csv", row.names = F, na = "")
+```
+
+*************************************
+Visit statistics
+***********************************
+
+This chunk groups the records by separate patients, and tells us how many visits they had. Then we take that long dataframe that has told us how many visits each of them have, and create some summary statistics to give us an idea of how many patients we have, and how many visits we have data for. 
+```{r : visit stats}
+numbervisits <- participantsnoduplicates %>%
+  group_by(CO.ID) %>%
+  summarise(n=n())
+
+numbervisitsstats <- numbervisits %>%
+  summarise(numberpatients =n(),
+            meanvisits=mean(n, na.rm = TRUE),
+            medianvisits=median(n, na.rm = TRUE),
+            sdvisits=sd(n, na.rm = TRUE),
+            minvisits=min(n, na.rm = TRUE),
+            maxvisits=max(n, na.rm = TRUE))
+```
+
+
+```{r : visits per centre}
+centrevisits <- participantsnoduplicates %>%
+  group_by(Centre.ID, Country...Centre) %>%
+  summarise(number_of_visits = n())
+
+write.csv(centrevisits, "outputs/centrevisits_perfect.csv", row.names = F, na = "")
+
+patientspercentre <- participantsnoduplicates %>%
+  group_by(Centre.ID) %>%
+  summarise(number_of_patients = n_unique(CO.ID))
+
+write.csv(patientspercentre, "outputs/patientspercentre_perfect.csv", row.names = F, na = "")
+
+centreparticipation <- left_join(centrevisits, patientspercentre, by="Centre.ID")
+
+write.csv(centreparticipation, "outputs/centreparticipation_perfect.csv", row.names = F, na = "")
+
+countryvisits <- participantsnoduplicates %>%
+  group_by(Country...Centre) %>%
+  summarise(number_of_centres = n_unique(Centre.ID),
+            number_of_visits = n(),
+            number_of_patients = n_unique(CO.ID))
+
+write.csv(countryvisits, "outputs/countryparticipation_perfect.csv", row.names = F, na = "")
+```
+
+***********************
+Calculating total medication doses
+************************
+
+```{r : medication per visit}
+totalmedicationcalculation <- medication %>%
+  group_by(assessment_id) %>%
+  summarise(total_dose = sum(dose, na.rm = TRUE))
+
+totalmedication <- left_join(medication, totalmedicationcalculation, by = "assessment_id")
+
+singletotalmedication <- totalmedication %>%
+  distinct(assessment_id, .keep_all = TRUE)
+singletotalmedication <- subset(singletotalmedication,
+                                select = -c(dose, time, note))
+# singletotalmedication is med frame with one row per assessment with the total med dose included
+```
+
+
+```{r : medication visits}
+medication_details <- medication %>%
+  group_by(assessment_id) %>%
+  summarise(n = n())
+
+numbervisitsstats$visits_with_med_data <- medication_details %>%
+  summarise(n = n())
+
+numbervisitsstats$visits_with_lab_data <- n_unique(labs$assessment_id)
+
+write.csv(numbervisitsstats, file = "outputs/numbervisitsstats_perfect.csv", row.names = F, na = "")
+
+# in medication raw data, some centreIDs are entered as times or dates which are NOT USEABLE... therefore, I have converted all centre ids in med frame to numbers and consequently will have lost some centres which have incorrect centre id formats.
+medication$Centre.ID <- as.numeric(medication$Centre.ID)
+
+med_entries_per_centre <- medication %>%
+  group_by(Centre.ID) %>%
+  summarise(n = n())
+
+# to see which medication records and centres have been lost:
+wrong_med_centreids <- medication$Centre.ID
+lost_med_records <- subset(participantsnoduplicates, !Centre.ID %in% wrong_med_centreids)
+lost_med_centres <- as.data.frame(unique( lost_med_records$Centre.ID))
+
+write.csv(lost_med_records, file = "outputs/lost_med_records_perfect.csv", row.names = F, na = "")
+```
+
+let's next combine the  AE1, medication1, fludro1 and labs1 tables with the all visits
+
+```{r : joining meds and ae}
+meds <- left_join(singletotalmedication, fludro, by = c("CO.ID", "assessment_id", "assessment_date"))
+medsandae <- left_join(meds, ae, by = c("CO.ID", "assessment_id", "assessment_date"))
+
+#make unique identifier in medsandae
+medsandae$coid_asse_date <- paste(medsandae$CO.ID, medsandae$assessment_date)
+
+# removing all duplicated entries (based on coid_asse_date)
+medsandae_duplicates <- medsandae[duplicated(medsandae$coid_asse_date),]
+
+medsandae_entries_to_remove <- medsandae_duplicates$coid_asse_date
+medsandae <- subset(medsandae, !coid_asse_date %in% medsandae_entries_to_remove)
+
+# med_duplicates_check should now be empty
+medsandae_duplicates_check <- medsandae[duplicated(medsandae$coid_asse_date),]
+
+write.csv(medsandae, file = "outputs/medsandae_perfect.csv", row.names = F, na = "")
+```
+
+***********************
+Medication frame
+************************
+Let's start by cleaning medication data frame (units, typos, standardised doses)
+Create unique identifier of coid_asse_date
+```{r : medication data frames}
+medication_clean <- medication
+medication_clean$coid_asse_date <- paste(medication_clean$CO.ID, medication_clean$assessment_date)
+medication_clean$coid_asse_id <- paste(medication_clean$CO.ID, medication_clean$assessment_id)
+
+# note column is always empty / "NULL", so remove it
+table(medication_clean$note)
+medication_clean$note <- NULL
+
+# assessment date as date type, not character
+medication_clean$assessment_date <- 
+  as.Date(medication_clean$assessment_date, format="%d/%m/%Y")
+
+# time as time not numeric
+medication_clean$hours_through_day <- as.numeric(medication_clean$time / 3600)
+medication_clean$hours_through_day <- round(medication_clean$hours_through_day, digits = 0)
+
+medication_clean$hours_through_day <-
+  ifelse(medication_clean$hours_through_day != 0,
+         as.numeric(medication_clean$hours_through_day),
+         NA)
+```
+
+Now let's check what units have been used to see if we need to standardise any...
+Assuming that NULL units are also mg.
+
+```{r}
+medication_clean <- medication_clean[order(medication_clean$assessment_id, medication_clean$time),]
+
+table(medication_clean$unit)
+# if mcg has been used, according to ^, then the associated dose value needs to be changed/standardised.
+
+# these are the records using mcg as units
+units_mcg <- subset(medication_clean, unit == "mcg")
+units_mcg$dose
+
+# let's correct the doses of mcg records
+medication_clean$dose <-
+  ifelse(medication_clean$unit == "mcg",
+         as.numeric(medication_clean$dose) * 1000,
+         as.numeric(medication_clean$dose))
+
+units_mcg$dose
+
+medication_clean$dose <-
+  ifelse(medication_clean$unit=="mcg" &
+         medication_clean$medicine=="dexamethasone",
+         as.numeric(medication_clean$dose) / 1000 ,
+         as.numeric(medication_clean$dose))
+
+#remember, we need to correct the dose if the preparation is unknown, otherwise it will go to NA
+medication_clean$dose <-
+  ifelse(is.na(medication_clean$medicine),
+         as.numeric(medication_clean$dose),
+         as.numeric(medication_clean$dose))
+
+units_mcg$dose
+
+# update units
+medication_clean$unit <-
+  ifelse(medication_clean$unit == "mcg",
+         "mg",
+         medication_clean$unit)
+
+table(medication_clean$unit)
+```
+
+```{r : check units for dexamethasone - DO SEPARATELY FOR EACH ANALYSIS}
+dex_subset <- subset(medication_clean, medicine == "dexamethasone")
+max(dex_subset$dose, na.rm = T)
+# ^ shows values of 250 (i.e OVER 10) which is TOO HIGH, therefore it's likely that these values are indeed in mcg, therefore we need to manually change these.
+
+dex_HIGH_values <- subset(dex_subset, dose >10)
+# ^ shows high dex values which need to be manually changed - need to be * 1000.
+
+medication_clean$dose <-
+  ifelse(medication_clean$coid_asse_id == "19157E 14782" & medication_clean$hours_through_day == 17,
+        as.numeric(medication_clean$dose) / 1000,
+        as.numeric(medication_clean$dose))
+
+medication_clean$dose <-
+  ifelse(medication_clean$coid_asse_id == "56050E 1734",
+        as.numeric(medication_clean$dose) / 1000,
+        as.numeric(medication_clean$dose))
+
+medication_clean$dose <-
+  ifelse(medication_clean$coid_asse_id == "59565E 16733" & medication_clean$medicine == "dexamethasone",
+        as.numeric(medication_clean$dose) / 1000,
+        as.numeric(medication_clean$dose))
+
+medication_clean$dose <-
+  ifelse(medication_clean$coid_asse_id == "27380E 16997" & medication_clean$medicine == "dexamethasone",
+        as.numeric(medication_clean$dose) / 1000,
+        as.numeric(medication_clean$dose))	
+
+medication_clean$dose <-
+  ifelse(medication_clean$coid_asse_id == "18021E 21449" & medication_clean$medicine == "dexamethasone",
+        as.numeric(medication_clean$dose) / 1000,
+        as.numeric(medication_clean$dose))
+
+
+# once manual adjustments of dex values have been made, run these lines - 'dex_HIGH_values' should now be empty and max dex dose should be less than 10!
+dex_subset <- subset(medication_clean, medicine == "dexamethasone")
+dex_HIGH_values <- subset(dex_subset, dose >10)
+dex_HIGH_values
+max(dex_subset$dose, na.rm = T)
+```
+```{r : adding in hc equivalents}
+# this table shows how many records of each medication are present (bare in mind one participant can have multiple records)
+table(medication_clean$medicine)
+
+medication_clean$HC_equivalent <- NA
+
+prednisoloneratio <- 5
+dexamethasoneratio <- 80
+
+medication_clean$HC_equivalent <- 
+  ifelse(medication_clean$medicine == "hydrocortisone", medication$dose, NA)
+
+medication_clean$HC_equivalent <- 
+  ifelse(medication_clean$medicine == "prednisolone", (as.numeric(medication_clean$dose) * prednisoloneratio), medication_clean$HC_equivalent)
+
+medication_clean$HC_equivalent <- 
+  ifelse(medication_clean$medicine == "dexamethasone", (as.numeric(medication_clean$dose) * dexamethasoneratio), medication_clean$HC_equivalent)
+
+# let's double check the HC equivalent values seem sensible. You'll have a better idea than me of what is sensible here!
+checkmedstats <- medication_clean %>%
+  group_by(medicine) %>%
+  summarise(mean_dose = mean(HC_equivalent, na.rm = TRUE),
+            median_dose = median(HC_equivalent,na.rm= TRUE),
+            sd_dose = sd(HC_equivalent, na.rm = TRUE),
+            min_dose = min(HC_equivalent, na.rm = TRUE),
+            max_dose = max(HC_equivalent, na.rm = TRUE)) %>%
+  mutate_if(is.numeric, ~round(., 2))
+```
+
+
+BSA is present in 'participants' frame.
+```{r : adding HC/bsa and fludro/bsa}
+# I have used HC_equivalents in this HC per BSA calculation.
+medication_clean$HC_per_bsa <- medication_clean$HC_equivalent / participantsnoduplicates$BSA...CAH.Longitudinal.Data
+
+medication_clean$HC_per_bsa <- round(medication_clean$HC_per_bsa, digits = 2)
+
+# Join fludo dose to medication_clean to use for getting fludro/bsa
+# need to make new subset fludro frame
+fludro$coid_asse_date <- paste(fludro$CO.ID, fludro$assessment_date)
+fludro_subset <- select(fludro, c ("coid_asse_date", "fludrocortisone_dose"))
+medication_clean <- left_join(medication_clean, fludro_subset, by = c ("coid_asse_date"))
+
+medication_clean$fludro_per_bsa <- medication_clean$fludrocortisone_dose / participantsnoduplicates$BSA...CAH.Longitudinal.Data
+
+medication_clean$fludro_per_bsa <- round(medication_clean$fludro_per_bsa, digits = 2)
+```
+
+
+
+Checking that there are no duplicated assessment ids for different dates (note: can have same asse id on same date)
+```{r : checking duplicate assessment dates}
+medication_date_check <- 
+  medication_clean %>% 
+  group_by(assessment_id) %>% 
+  summarise(
+    min_date = min(assessment_date),
+    max_date = max(assessment_date))
+
+medication_date_check$difference <- 
+  medication_date_check$max_date - 
+  medication_date_check$min_date
+
+min(as.numeric(medication_date_check$difference))
+max(as.numeric(medication_date_check$difference))
+# ^ all should equal 0 days difference. This means that all dates within the same assessments are the same.
+```
+```{r : create new variable names to make joining data frames later easier}
+medication_clean$meds_unit <- medication_clean$unit
+medication_clean$GC_dose <- medication_clean$dose
+```
+
+```{r : sequence along entries}
+medication_clean$assessment_entry <-
+  ave(medication_clean$CO.ID,
+      medication_clean$assessment_id,
+      FUN = seq_along)
+```
+
+Check frequencies of entries to check for a single assessment having lots of entries (i.e. duplications) which may indicate erroneously duplicated entries
+```{r}
+table(medication_clean$assessment_entry)
+```
+
+```{r : making meds_wide}
+medication_clean_1st_entry <- 
+  medication_clean %>% 
+  filter(assessment_entry==1)
+
+medication_clean_2nd_entry <- 
+  medication_clean %>% 
+  filter(assessment_entry==2)
+
+medication_clean_3rd_entry <- 
+  medication_clean %>% 
+  filter(assessment_entry==3)
+
+medication_clean_4th_entry <- 
+  medication_clean %>% 
+  filter(assessment_entry==4)
+
+medication_clean_5th_entry <- 
+  medication_clean %>% 
+  filter(assessment_entry==5)
+
+medication_clean_6th_entry <- 
+  medication_clean %>% 
+  filter(assessment_entry==6)
+
+# now we can get rid of the assessment entry column
+# medication$assessment_entry <- NULL
+medication_clean$assessment_entry <- NULL
+
+medication_clean_1st_entry$assessment_entry <- NULL
+
+medication_clean_2nd_entry$assessment_entry <- NULL
+
+medication_clean_3rd_entry$assessment_entry <- NULL
+
+medication_clean_4th_entry$assessment_entry <- NULL
+
+medication_clean_5th_entry$assessment_entry <- NULL
+
+medication_clean_6th_entry$assessment_entry <- NULL
+
+
+#then add the appropriate suffix to each column in these frames to make them different before joining
+colnames(medication_clean_1st_entry) <- 
+  paste(colnames(medication_clean_1st_entry), 1, sep="_")
+
+colnames(medication_clean_2nd_entry) <- 
+  paste(colnames(medication_clean_2nd_entry), 2, sep="_")
+
+colnames(medication_clean_3rd_entry) <- 
+  paste(colnames(medication_clean_3rd_entry), 3, sep="_")
+
+colnames(medication_clean_4th_entry) <- 
+  paste(colnames(medication_clean_4th_entry),4, sep="_")
+
+colnames(medication_clean_5th_entry) <- 
+  paste(colnames(medication_clean_5th_entry), 5, sep="_")
+
+colnames(medication_clean_6th_entry) <- 
+  paste(colnames(medication_clean_6th_entry),6, sep="_")
+
+
+medication_clean_1st_entry <- medication_clean_1st_entry %>%
+  rename("CO.ID" = "CO.ID_1",
+         "assessment_id" = "assessment_id_1",
+         "meds_assessment_date" = "assessment_date_1")
+
+medication_clean_2nd_entry <- medication_clean_2nd_entry %>%
+  rename("CO.ID" = "CO.ID_2",
+         "assessment_id" = "assessment_id_2",
+         "meds_assessment_date" = "assessment_date_2")
+
+medication_clean_3rd_entry <- medication_clean_3rd_entry %>%
+  rename("CO.ID" = "CO.ID_3",
+         "assessment_id" = "assessment_id_3",
+         "meds_assessment_date" = "assessment_date_3")
+
+medication_clean_4th_entry <- medication_clean_4th_entry %>%
+  rename("CO.ID" = "CO.ID_4",
+         "assessment_id" = "assessment_id_4",
+         "meds_assessment_date" = "assessment_date_4")
+
+medication_clean_5th_entry <- medication_clean_5th_entry %>%
+  rename("CO.ID" = "CO.ID_5",
+         "assessment_id" = "assessment_id_5",
+         "meds_assessment_date" = "assessment_date_5")
+
+medication_clean_6th_entry <- medication_clean_6th_entry %>%
+  rename("CO.ID" = "CO.ID_6",
+         "assessment_id" = "assessment_id_6",
+         "meds_assessment_date" = "assessment_date_6")
+```
+
+```{r : joining widened med frames together}
+meds_wide <- medication_clean_1st_entry %>%
+  left_join(medication_clean_2nd_entry, by=c("CO.ID", "assessment_id", "meds_assessment_date")) %>%
+  left_join(medication_clean_3rd_entry, by=c("CO.ID", "assessment_id", "meds_assessment_date")) %>%
+  left_join(medication_clean_4th_entry, by=c("CO.ID", "assessment_id", "meds_assessment_date")) %>%
+  left_join(medication_clean_5th_entry, by=c("CO.ID", "assessment_id", "meds_assessment_date")) %>%
+  left_join(medication_clean_6th_entry, by=c("CO.ID", "assessment_id", "meds_assessment_date"))
+
+# adding in single total medication
+meds_all <- left_join(meds_wide, singletotalmedication, by = c("CO.ID", "assessment_id"))
+
+write.csv(meds_wide, file = "outputs/meds_wide_perfect.csv", row.names = F, na = "")
+```
+
+Subset dataframes
+
+```{r : subsetting meds_wide}
+meds_wide_subset <- subset(meds_wide, select = c("Centre.ID_1", "CO.ID", "assessment_id", "meds_assessment_date", "coid_asse_id_1", "coid_asse_date_1",
+                                                 "medicine_1", "dose_1", "hours_through_day_1", "HC_equivalent_1", "HC_per_bsa_1", "fludrocortisone_dose_1", "fludro_per_bsa_1",
+                                                 "medicine_2", "dose_2", "hours_through_day_2", "HC_equivalent_2", "HC_per_bsa_2", "fludrocortisone_dose_2", "fludro_per_bsa_2",
+                                                 "medicine_3", "dose_3", "hours_through_day_3", "HC_equivalent_3", "HC_per_bsa_3", "fludrocortisone_dose_3", "fludro_per_bsa_3",
+                                                 "medicine_4", "dose_4", "hours_through_day_4", "HC_equivalent_4", "HC_per_bsa_4", "fludrocortisone_dose_4", "fludro_per_bsa_4",
+                                                 "medicine_5", "dose_5", "hours_through_day_5", "HC_equivalent_5", "HC_per_bsa_5", "fludrocortisone_dose_5", "fludro_per_bsa_5",
+                                                 "medicine_6", "dose_6", "hours_through_day_6", "HC_equivalent_6", "HC_per_bsa_6", "fludrocortisone_dose_6", "fludro_per_bsa_6"))
+
+meds_wide_subset <- meds_wide_subset %>%
+  rename("coid_asse_date" = "coid_asse_date_1")
+
+# removing all duplicated entries (based on coid_asse_date)
+med_duplicates <- meds_wide_subset[duplicated(meds_wide_subset$coid_asse_date),]
+med_entries_to_remove <- med_duplicates$coid_asse_date
+meds_wide_subset <- subset(meds_wide_subset, !coid_asse_date %in% med_entries_to_remove)
+
+# med_duplicates_check should now be empty
+med_duplicates_check <- meds_wide_subset[duplicated(meds_wide_subset$coid_asse_date),]
+
+write.csv(meds_wide_subset, file = "outputs/meds_wide_subset_perfect.csv", row.names = F, na = "")
+```
+
+***********************
+Joining lab to participants
+************************
+
+```{r : making labs wide, include=FALSE}
+# editing lab dataframe to use it here
+labs[labs == "NULL"] <- NA
+
+# noticed some errors in centre.ids (e.g.: centre 180 in participants is 18000% in labs... let's correct this!)
+
+labs$Centre.ID <-
+  ifelse(labs$Centre.ID == "18000%" | labs$Centre.ID == "18000.00%",
+         as.character(180),
+         as.character(labs$Centre.ID))
+
+
+labs$Centre.ID <- ifelse(labs$Centre.ID == "18200.00%",
+                         as.character(182),
+                         as.character(labs$Centre.ID))
+
+labsvalues <- subset(labs, select = -c(result, date_and_time))
+
+labsvalues <- labsvalues %>%
+  drop_na() %>%
+  pivot_wider(names_from = "labs_type",
+              values_from = "value")
+
+labsinterp <- subset(labs, select = -c(value, date_and_time))
+labsinterp <- labsinterp %>%
+  drop_na() %>%
+  pivot_wider(names_from = "labs_type",
+              values_from = "result")
+
+labs_wide <- left_join(labsvalues, labsinterp, by = c("CO.ID", "assessment_id", "assessment_date", "Centre.ID"))
+
+names(labs_wide) <- gsub(x = names(labs_wide), pattern = ".x",
+                        replacement = ".value")
+names(labs_wide) <- gsub(x = names(labs_wide), pattern = ".y",
+                        replacement = ".interpretation")
+
+labs_wide$Centre.ID <-as.numeric(labs_wide$Centre.ID)
+
+labs_wide$coid_asse_date <- paste(labs_wide$CO.ID, labs_wide$assessment_date)
+labs_wide$coid_asse_id <- paste(labs_wide$CO.ID, labs_wide$assessment_id)
+
+# only interested in a subset of lab results - only want 17OHP and andostrodione
+labs_wide_subset <- select(labs_wide, c("CO.ID", "assessment_date", "coid_asse_date", "ohp17.value", "ohp17.interpretation", "andostenedione.value", "andostenedione.interpretation"))
+
+# removing all duplicated entries (based on coid_asse_date)
+lab_duplicates <- labs_wide_subset[duplicated(labs_wide_subset$coid_asse_date),]
+lab_entries_to_remove <- lab_duplicates$coid_asse_date
+labs_wide_subset <- subset(labs_wide_subset, !coid_asse_date %in% lab_entries_to_remove)
+
+# lab_duplicates_check should now be empty
+lab_duplicates_check <- labs_wide_subset[duplicated(labs_wide_subset$coid_asse_date),]
+
+
+labs_wide_subset_for_export <- apply(labs_wide_subset, 2, as.character)
+write.csv(labs_wide_subset_for_export, file = "outputs/labs_wide_subset_perfect.csv", row.names = F, na = "")
+
+```
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~CLEAR ENVIRONMENT NOW~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+```{r : clear environment}
+rm(list=ls())
+```
+
+Re-read these files back into cleaned environment
+```{r : re-reading files in to clear environment}
+participantsnoduplicates <- read.csv("outputs/participantsnoduplicates_perfect.csv", header=T, na.strings="")
+meds_wide_subset <- read.csv("outputs/meds_wide_subset_perfect.csv", header=T, na.strings="")
+labs_wide_subset <- read.csv("outputs/labs_wide_subset_perfect.csv", header=T, na.strings="")
+medsandae <- read.csv("outputs/medsandae_perfect.csv", header=T, na.strings="")
+```
+
+```{r : making icahalldata, include= FALSE}
+# join medsandae
+icahdata <- left_join(participantsnoduplicates, medsandae, by=c("CO.ID", "coid_asse_date"))
+
+icahdata$visit_date <- icahdata$Date...CAH.Longitudinal.Data
+icahdata$Age_at_visit <- icahdata$Age.at.assessment
+icahdata$BSA <- icahdata$BSA...CAH.Longitudinal.Data
+
+# join meds_wide_subset
+icahdata <- left_join(icahdata, meds_wide_subset, by = c("CO.ID", "coid_asse_date"))
+
+# join labs_wide_subset
+icahdata <- left_join(icahdata, labs_wide_subset, by = c("CO.ID", "coid_asse_date"))
+```
+
+```{r : checking duplications in icahdata}
+# let's see which rows are duplications
+# this data frame should be empty!
+icahduplications <- icahdata[duplicated(icahdata$coid_asse_date),]
+```
+
+```{r : writing final table - icahdata}
+write.csv(icahdata, file = "outputs/icahdata_perfect.csv", row.names = F, na = "")
+```
+
